--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -34,8 +34,9 @@ resolver:
 
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
-autobind:
-  - "github.com/siongui/go-graphql-postgresql-todo-example/graph/model"
+#autobind:
+#  - "github.com/siongui/go-graphql-postgresql-todo-example/graph/model"
+# See: https://github.com/99designs/gqlgen/issues/1860
 
 # This section declares type mapping between the GraphQL and go type systems
 #
