exclude pattern migrations/*.sql: no matching files found

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,3 +1,5 @@
 issues:
   exclude:
     - "Error return value of `logger.Log` is not checked"
+    # pattern migrations/*.sql: no matching files found
+    - 'pattern migrations/\*.sql: no matching files found'
